# examples/dotnet/Models/SBORDecodeRequest.cs
@@ -1,0 +1,176 @@
+/*
+ * Transaction Lib
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.1.0
+ * 
+ * Generated by: https://github.com/openapitools/openapi-generator.git
+ */
+
+using System;
+using System.Linq;
+using System.IO;
+using System.Text;
+using System.Text.RegularExpressions;
+using System.Collections;
+using System.Collections.Generic;
+using System.Collections.ObjectModel;
+using System.Runtime.Serialization;
+using Newtonsoft.Json;
+using Newtonsoft.Json.Converters;
+using System.ComponentModel.DataAnnotations;
+
+namespace Models
+{
+    /// <summary>
+    /// SBORDecodeRequest
+    /// </summary>
+    [DataContract]
+    public partial class SBORDecodeRequest :  IEquatable<SBORDecodeRequest>, IValidatableObject
+    {
+        /// <summary>
+        /// Initializes a new instance of the <see cref="SBORDecodeRequest" /> class.
+        /// </summary>
+        [JsonConstructorAttribute]
+        protected SBORDecodeRequest() { }
+        /// <summary>
+        /// Initializes a new instance of the <see cref="SBORDecodeRequest" /> class.
+        /// </summary>
+        /// <param name="encodedValue">encodedValue (required).</param>
+        /// <param name="networkId">networkId (required).</param>
+        public SBORDecodeRequest(string encodedValue = default(string), int networkId = default(int))
+        {
+            // to ensure "encodedValue" is required (not null)
+            if (encodedValue == null)
+            {
+                throw new InvalidDataException("encodedValue is a required property for SBORDecodeRequest and cannot be null");
+            }
+            else
+            {
+                this.EncodedValue = encodedValue;
+            }
+
+            // to ensure "networkId" is required (not null)
+            if (networkId == null)
+            {
+                throw new InvalidDataException("networkId is a required property for SBORDecodeRequest and cannot be null");
+            }
+            else
+            {
+                this.NetworkId = networkId;
+            }
+
+        }
+
+        /// <summary>
+        /// Gets or Sets EncodedValue
+        /// </summary>
+        [DataMember(Name="encoded_value", EmitDefaultValue=true)]
+        public string EncodedValue { get; set; }
+
+        /// <summary>
+        /// Gets or Sets NetworkId
+        /// </summary>
+        [DataMember(Name="network_id", EmitDefaultValue=true)]
+        public int NetworkId { get; set; }
+
+        /// <summary>
+        /// Returns the string presentation of the object
+        /// </summary>
+        /// <returns>String presentation of the object</returns>
+        public override string ToString()
+        {
+            var sb = new StringBuilder();
+            sb.Append("class SBORDecodeRequest {\n");
+            sb.Append("  EncodedValue: ").Append(EncodedValue).Append("\n");
+            sb.Append("  NetworkId: ").Append(NetworkId).Append("\n");
+            sb.Append("}\n");
+            return sb.ToString();
+        }
+
+        /// <summary>
+        /// Returns the JSON string presentation of the object
+        /// </summary>
+        /// <returns>JSON string presentation of the object</returns>
+        public virtual string ToJson()
+        {
+            return Newtonsoft.Json.JsonConvert.SerializeObject(this, Newtonsoft.Json.Formatting.Indented);
+        }
+
+        /// <summary>
+        /// Returns true if objects are equal
+        /// </summary>
+        /// <param name="input">Object to be compared</param>
+        /// <returns>Boolean</returns>
+        public override bool Equals(object input)
+        {
+            return this.Equals(input as SBORDecodeRequest);
+        }
+
+        /// <summary>
+        /// Returns true if SBORDecodeRequest instances are equal
+        /// </summary>
+        /// <param name="input">Instance of SBORDecodeRequest to be compared</param>
+        /// <returns>Boolean</returns>
+        public bool Equals(SBORDecodeRequest input)
+        {
+            if (input == null)
+                return false;
+
+            return 
+                (
+                    this.EncodedValue == input.EncodedValue ||
+                    (this.EncodedValue != null &&
+                    this.EncodedValue.Equals(input.EncodedValue))
+                ) && 
+                (
+                    this.NetworkId == input.NetworkId ||
+                    (this.NetworkId != null &&
+                    this.NetworkId.Equals(input.NetworkId))
+                );
+        }
+
+        /// <summary>
+        /// Gets the hash code
+        /// </summary>
+        /// <returns>Hash code</returns>
+        public override int GetHashCode()
+        {
+            unchecked // Overflow is fine, just wrap
+            {
+                int hashCode = 41;
+                if (this.EncodedValue != null)
+                    hashCode = hashCode * 59 + this.EncodedValue.GetHashCode();
+                if (this.NetworkId != null)
+                    hashCode = hashCode * 59 + this.NetworkId.GetHashCode();
+                return hashCode;
+            }
+        }
+
+        /// <summary>
+        /// To validate all properties of the instance
+        /// </summary>
+        /// <param name="validationContext">Validation context</param>
+        /// <returns>Validation Result</returns>
+        IEnumerable<System.ComponentModel.DataAnnotations.ValidationResult> IValidatableObject.Validate(ValidationContext validationContext)
+        {
+
+
+            // NetworkId (int) maximum
+            if(this.NetworkId > (int)255)
+            {
+                yield return new System.ComponentModel.DataAnnotations.ValidationResult("Invalid value for NetworkId, must be a value less than or equal to 255.", new [] { "NetworkId" });
+            }
+
+            // NetworkId (int) minimum
+            if(this.NetworkId < (int)0)
+            {
+                yield return new System.ComponentModel.DataAnnotations.ValidationResult("Invalid value for NetworkId, must be a value greater than or equal to 0.", new [] { "NetworkId" });
+            }
+
+            yield break;
+        }
+    }
+
+}
